<resources>
    <string name="app_name">SampleAppFroStudent</string>
    <string name="catalog_activity_label">Catalog</string>
    <string name="buttons_activity_label">Buttons</string>
    <string name="text_fields_activity_label">Text fields</string>
    <string name="sample_activity_label">Sample activity</string>
    <string name="button_label">Button</string>
    <string name="toggle_on_label">ON</string>
    <string name="toggle_off_label">OFF</string>
    <string name="checkbox_label">CheckBox</string>
    <string name="radio_button_label_1">RadioButton 1</string>
    <string name="radio_button_label_2">RadioButton 2</string>
    <string name="padding_text">Text view with padding</string>
    <string name="button_get_text_lable">Get input text</string>
    <string name="business_calculation">Business Calculation</string>
    <string name="notifications">Notifications</string>
    <string name="lifecycle_activity">Lifecycle Activity</string>
    <string name="revenue">Revenue</string>
    <string name="costs">Costs</string>
    <string name="calculate">Calculate</string>
    <string name="toast_button_label">Show Toast</string>
    <string name="information_dialog_button_label">Show Alert Dialog</string>
    <string name="alert_dialog_button_label">Show Alert Dialog with buttons</string>
    <string name="snackbar_button_label">Show Snackbar</string>
</resources>
