<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_button_label" />

    <Button
        android:id="@+id/btn_alert_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_dialog_button_label" />

    <Button
        android:id="@+id/btn_alert_dialog_with_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_button_label" />

    <Button
        android:id="@+id/btn_snackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbar_button_label" />

</LinearLayout>